# HydroRegressor

./: README.md  main.py  pair_measurements.py  plot_paired.py  pyproject.toml
app/: main.py  model.py  train.py  train_narx.py
docker/: Dockerfile  docker-compose.yml
