[project]
name = "hydroregressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pandas",
    "numpy",
    "torch",
    "scikit-learn",
    "joblib",
    "matplotlib>=3.10.8",
]

[tool.uv]
